# innernet-playbooks

./: .gitignore  README.md  ansible.cfg  galaxy.yml  innernet_auth.yaml  innernet_members.yaml  pyproject.toml  requirements.txt
ansible_collections/lido/innernet/molecule/default/: converge.yml  create.yml
ansible_collections/lido/innernet/molecule/default/roles/libvirt_network/tasks/: main.yaml
lido/innernet/molecule/default/: prepare.yml
lido/innernet/molecule/default/roles/cloudinit_iso/tasks/: main.yaml
lido/innernet/molecule/default/roles/libvirt_vms/defaults/: main.yaml
lido/innernet/molecule/default/tests/: test_connection.py
molecule/default/: converge.yml  destroy.yml  molecule.yml  prepare.yml  side_effect.yml
molecule/default/roles/cloudinit_iso/handlers/: main.yaml
molecule/default/roles/libvirt_network/templates/: network.xml.j2
molecule/default/roles/libvirt_vms/handlers/: main.yaml
molecule/default/roles/libvirt_vms/tasks/: main.yaml
molecule/default/roles/libvirt_vms/templates/: domain.xml.j2
molecule/default/roles/vm_image/tasks/: main.yaml
molecule/default/tests/: test_connection.py
playbooks/: innernet_auth.yaml  innernet_members.yaml
