[tool.poetry]
name = "innernet-playbooks"
version = "1.0.0"
description = "Innernet configuration playbooks"
authors=["George Shuklin <george.shuklin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^7.1.0"
pytest = "^7.2"
pytest-testinfra = "^7.0"
flaky = "^3.7"
netaddr = "^0.8"
black = "^22.12.0"
molecule = "^4.0.4"
requests = "^2.28"
libvirt-python = "^9.0"
lxml = "^4.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

